# elf2mif

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  build_win64.sh
cmake/: cpack.cmake  version.cmake
elf2mif/: CMakeLists.txt  elf2mif.cpp
tests/: CMakeLists.txt  runtest.cmake  test.RV32.elf  test.RV32.mif
